feat: index rate limit env var

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ DB_PASSWORD=
 DB_URL=
 DB_USER=
 ENV=
+INDEX_RATE_LIMIT=
 MAX_N=
-MAX_ROUTINES=
 RPC_LIST=
 SERVER_PORT=
-START_INDEXING_BLOCK_NUMBER=
+START_INDEX_BLOCK_NUMBER=
